# th-rust

./: ARCHITECTURE.md  Cargo.toml  README.md  install.ps1  install.sh  test_autoupdate.sh  th.bat  th.sh
src/: cli.rs  config.rs  display.rs  error.rs  main.rs  process.rs  shell.rs  teleport.rs  update.rs
src/commands/: animate.rs  aws.rs  changelog.rs  database.rs  docs.rs  kube.rs  login.rs  logout.rs  mod.rs  quickstart.rs  terraform.rs  update.rs  version.rs
